--- a/Web Mining Project.ipynb
+++ b/Web Mining Project.ipynb
@@ -17,7 +17,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# **BIA-660 WEB MINING-GROUP PROJECT**\n",
+        "# **WEB MINING BASED PROJECT**\n",
         "\n",
         "---\n",
         "\n"
